--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -1,84 +1,89 @@
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/styles.min.css"/>
-    </head>
-    <body>
-        <div class="container-fluid navy speech">
-            <div class="row header" id="home">
-                <div class="col-auto logo-container">
-                    <img src="images/logo.png"/>
-                </div>
-                <div class="col float-right">
-                    <ul class="nav-list">
-                        <li class="col-auto"><a href="#home">Home</a></li>
-                        <li class="separator">.</li>
-                        <li class="col-auto">PR</li>
-                        <li class="separator">.</li>
-                        <li class="col-auto">Content</li>
-                        <li class="separator">.</li>
-                        <li class="col-auto">Marketing</li>
-                        <li class="separator">.</li>
-                        <li class="col-auto">Social Media</li>
-                        <li class="separator">.</li>
-                        <li class="col-auto">Contact</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="header_chart">
-                <div class="col-6">
-                    <div class="row main">
-                        <p>
-                            Grow your<br/>
-                            business
-                        </p>
-                    </div>
-                    <div class="row sub">
-                        <p>
-                            PR and Marketing<br/>
-                            to engage and convert
-                        </p>
-                    </div>
-                </div>
-                <div class="col-6 chart-container">
-                    <img src="svg/header_chart.svg"/>
-                </div>
-            </div>
-            <div class="row header_contact">
-                <div class="col">
-                    <p class="title">Call us on</p>
-                    <p class="text">01423 545 684</p>
-                </div>
-                <div class="col">
-                    <p class="title">Email</p>
-                    <p class="text">hello@jmpragency.co.uk</p>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid lblue speech">
 
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.min.css" />
+</head>
+
+<body>
+    <div class="container-fluid navy speech">
+        <div class="row header" id="home">
+            <div class="col-auto logo-container">
+                <img src="images/logo.png" />
+            </div>
+            <div class="col float-right">
+                <ul class="nav-list">
+                    <li class="col-auto"><a href="#home">Home</a></li>
+                    <li class="separator">.</li>
+                    <li class="col-auto">PR</li>
+                    <li class="separator">.</li>
+                    <li class="col-auto">Content</li>
+                    <li class="separator">.</li>
+                    <li class="col-auto">Marketing</li>
+                    <li class="separator">.</li>
+                    <li class="col-auto">Social Media</li>
+                    <li class="separator">.</li>
+                    <li class="col-auto">Contact</li>
+                </ul>
+            </div>
         </div>
-        <div class="container-fluid lblue">
-            <div class="row section-2">
-                <div class="col-3">
-                    <div class="speech-cluster">
-                        <img src="svg/speech_bubble_cluster.svg"/>
-                    </div>
-                </div>
-                <div class="col-6">
+        <div class="header_chart">
+            <div class="col-6">
+                <div class="row main">
                     <p>
-                        JMPR Agency creates hard-working campaigns and strategies that deliver referrals, brand awareness and sales growth. 
-                        We have been helping SMEs in Yorkshire to raise their profile and improve profitability for more than a decade. 
-                        Find out what we can do for you.
+                        Grow your<br />
+                        business
                     </p>
                 </div>
-                <div class="col-3">
-                    <div class="speech-white">
-                        <img src="svg/white_speech_bubble.svg"/>
-                    </div>
+                <div class="row sub">
+                    <p>
+                        PR and Marketing<br />
+                        to engage and convert
+                    </p>
+                </div>
+            </div>
+            <div class="col-6 chart-container">
+                <img src="svg/header_chart.svg" />
+            </div>
+        </div>
+        <div class="row header_contact">
+            <div class="col-4">
+                <p class="title">Call us on</p>
+                <p class="text">01423 545 684</p>
+            </div>
+            <div class="col-auto">
+                <p class="title">Email</p>
+                <p class="text">hello@jmpragency.co.uk</p>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid lblue speech">
+
+    </div>
+    <div class="container-fluid lblue">
+        <div class="row section-2">
+            <div class="col-3">
+                <div class="speech-cluster">
+                    <img src="svg/speech_bubble_cluster.svg" />
+                </div>
+            </div>
+            <div class="col-6">
+                <p>
+                    JMPR Agency creates hard-working campaigns and strategies that deliver referrals, brand awareness
+                    and sales growth.
+                    We have been helping SMEs in Yorkshire to raise their profile and improve profitability for more
+                    than a decade.
+                    Find out what we can do for you.
+                </p>
+            </div>
+            <div class="col-3">
+                <div class="speech-white">
+                    <img src="svg/white_speech_bubble.svg" />
                 </div>
             </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
